--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
+    implementation "androidx.room:room-rxjava3:$room_version"
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
